Move presence field implementation to its own class